Cleaned stuff up

--- a/distribution_step1.html
+++ b/distribution_step1.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<?php
-require('php/functions.php');
-?>
+<!DOCTYPE html> <!-- CLEANED -->
 <html lang="en">
     <head>
         <title>Timaflu - Distribution</title>
