--- a/distribution_step2.html
+++ b/distribution_step2.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<?php
-require('php/functions.php');
-?>
+<!DOCTYPE html> <!-- CLEANED -->
 <html lang="en">
     <head>
         <title>Timaflu - Distribution</title>
@@ -25,7 +22,7 @@ require('php/functions.php');
                 <div class="logo">TIMAFLU</div>
                 <div class="title">January 4th, 2018</div>
                 <ul class="menu">
-                    <div class="dropdown"><!-- Needed for dropdown-content, so when hovering over it it keeps displaying -->
+                    <div class="dropdown">
                         <a href="index.html">
                             <li><div class="profile-picture"></div><span>dr. B. Onderstal</span></li>
                         </a>
