--- a/distribution_step1.html
+++ b/distribution_step1.html
@@ -150,7 +150,7 @@
                                         <td><span>6152374</span></td>
                                         <td><div class="switcher grey"><span>&#9200; 1480 min </span><div class="switcher white"><span>tomorrow 16:00</span></div></div></td>
                                     </tr>
-                                    <tr>
+                                    <tr OnClick="document.location='distribution_step2.html'" style="cursor:pointer">
                                         <td><span>8793645</span></td>
                                         <td><div class="switcher red"><span class="blinker fast">&#9200; 40 min </span><div class="switcher white"><span>today 16:00</span></div></div></td>
                                     </tr>
